--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^11.0.20",
+    "@emailjs/browser": "^3.12.1",
+    "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "18",
     "react-dom": "18"
@@ -19,6 +20,6 @@
     "eslint": "8",
     "eslint-config-next": "14.1.0",
     "postcss": "8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "3.3.0"
   }
 }
