--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
+    "dotenv": "^16.4.5",
+    "emailjs": "^4.0.3",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "18",
